fix public sdk contains systemapi
Signed-off-by: houhaoyu <houhaoyu@huawei.com>
Change-Id: I3681904c53c240d74be4b64d06afb5c40613e9bb

--- a/compiler/如何新增或修改组件指导规范.md
+++ b/compiler/如何新增或修改组件指导规范.md
@@ -16,7 +16,8 @@
   "parents": [],
   "children": [],
   "single": boolean,
-  "noDebugLine": boolean
+  "noDebugLine": boolean,
+  "systemApi": boolean,
 }
 ```
 
@@ -29,6 +30,7 @@
 | children(可选，默认所有组件可用)                 | 子组件只能是哪些组件                |
 | single(可选，默认false)                          | 是否只能包含一个子组件              |
 | noDebugLine(可选，默认false)                     | 预览模式下对应组件是否生成debugline |
+| systemApi(可选，默认false)                     | 不想在public sdk内添加该组件请将该属性设置为true |
 
 #### 模块结构：
 
